--- a/pom.xml
+++ b/pom.xml
@@ -220,14 +220,14 @@
 
     <distributionManagement>
         <repository>
-            <id>${releaseRepository-Id}</id>
+            <id>${deployment}</id>
             <name>${releaseRepository-Name}</name>
-            <url>${http://3.7.69.242:8081/repository/maven-releases/}</url>
+            <url>${http://3.110.118.55:8081/repository/maven-releases/}</url>
         </repository>
         <snapshotRepository>
-            <id>${snapshotRepository-Id}</id>
+            <id>${deployment}</id>
             <name>${snapshotRepository-Name}</name>
-            <url>${http://3.7.69.242:8081/repository/maven-snapshots/}</url>
+            <url>${http://3.110.118.55:8081/repository/maven-snapshots/}</url>
             <uniqueVersion>false</uniqueVersion>
         </snapshotRepository>
     </distributionManagement>
